# camelog

./: .gitignore  LICENSE  README.md  camelog.opam  dune-project  markdown_test.md  template_test.html  test.html
.github/workflows/: main.yml
lib/: dune  files.ml  pages.ml  templates.ml  util.ml
test/: dune  template_test.html  test.ml
test/assets/: index.md  styles.css
test/assets/posts/: 2020-03-29-prijavite-se-za-plmw.md  2020-03-31-island-generation-with-typed-racket.md  wip-my-thoughts-on-lisps.md
test/test_website/: index.md  template.html
test/test_website/posts/: 2025-11-11-post-one.md  2025-11-11-post-two.md
